[container] change curve reference directory to dingo reference directory

--- a/configs/fs/stand-alone/topology.yaml
+++ b/configs/fs/stand-alone/topology.yaml
@@ -1,9 +1,9 @@
 kind: curvefs
 global:
   report_usage: true
-  data_dir: ${home}/curvefs/data/${service_role}${service_host_sequence}
-  log_dir: ${home}/curvefs/logs/${service_role}${service_host_sequence}
-  container_image: quay.io/opencurve/curve/curvefs:v2.7.0-rc1_d8a1137
+  data_dir: ${home}/dingofs/data/${service_role}${service_host_sequence}
+  log_dir: ${home}/dingofs/logs/${service_role}${service_host_sequence}
+  container_image: dingodatabase/dingofs:latest
   variable:
     home: /tmp
     target: server-host
