--- a/configs/fs/stand-alone/client.yaml
+++ b/configs/fs/stand-alone/client.yaml
@@ -1,7 +1,7 @@
 kind: curvefs
-container_image: quay.io/opencurve/curve/curvefs:v2.7.0-rc1_d8a1137
+container_image: dingodatabase/dingofs:latest
 mdsOpt.rpcRetryOpt.addrs: 10.0.1.1:6700,10.0.1.2:6700,10.0.1.3:6700
-log_dir: /home/curve/curvefs/logs/client
+log_dir: ${home}/dingofs/logs/client
 
 ### if fstype is s3
 s3.ak: <>
