--- a/configs/fs/cluster/topology-v2.yaml
+++ b/configs/fs/cluster/topology-v2.yaml
@@ -1,21 +1,24 @@
 kind: dingofs
 global:
-  report_usage: true
-  data_dir: ${home}/dingofs/data/${service_role}
+  container_image: harbor.zetyun.cn/dingofs/dingofs:v2
+  coordinator_addr: 10.225.10.50:6500,10.225.10.51:6500,10.225.10.52:6500
   log_dir: ${home}/dingofs/logs/${service_role}
-  container_image: dingodatabase/dingofs:latest
   variable:
     home: /tmp
     machine1: server-host1
-    machine2: serevr-host2
+    machine2: server-host2
     machine3: server-host3
 
-mds_services:
+mdsv2_services:
   config:
-    listen.ip: ${service_host}
-    listen.port: 6700
-    listen.dummy_port: 7700
+    server.port: 6900
   deploy:
     - host: ${machine1}
+      config:
+        instance_start_id: 1001
     - host: ${machine2}
+      config:
+        instance_start_id: 1002
     - host: ${machine3}
+      config:
+        instance_start_id: 1003
