--- a/configs/store/topology-store.yaml
+++ b/configs/store/topology-store.yaml
@@ -6,9 +6,9 @@ global:
   server_host: ${service_host}
   raft_host: ${service_host}
   default_replica_num: 3
-  raft_dir: ${home}/dingofs/raft/${service_role}
-  data_dir: ${home}/dingofs/data/${service_role}
-  log_dir: ${home}/dingofs/logs/${service_role}
+  raft_dir: ${home}/dingo-store/raft/${service_role}
+  data_dir: ${home}/dingo-store/data/${service_role}
+  log_dir: ${home}/dingo-store/logs/${service_role}
   variable:
     home: /tmp
     machine1: server-host1
