--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Build binary
         run: |
           make build
+          commitId="${{ github.sha }}"
+          shortCommitId=${commitId:0:7}
+          echo "${shortCommitId}" > bin/commit_id
 
       - name: Release
         uses: softprops/action-gh-release@v2
@@ -49,6 +52,7 @@ jobs:
         with:
           files: |
             bin/dingoadm
+            bin/commit_id
           name: dingoadm
           tag_name: ${{ env.TAG_NAME }}
           token: ${{ secrets.GH_TOKEN }}
