--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -273,5 +273,24 @@
             ],
             "showLog": true,
         },
+        {
+            "name": "dingoadm cluster add mdsv2-standalone",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}"
+            },
+            "args": [
+                "cluster",
+                "add"
+                "mdsv2-standalone",
+                "-f",
+                "/home/dongwei/deploy/topology-mdsv2-standalone.yaml"
+            ],
+            "showLog": true,
+        },
     ]
 }
