--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,6 +38,21 @@
             "showLog": true,
         },
         {
+            "name": "dingoadm status",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}"
+            },
+            "args": [
+                "status",
+            ],
+            "showLog": true,
+        },
+        {
             "name": "dingoadm status -sv",
             "type": "go",
             "request": "launch",
