[feat][mds] support deploy mds service with absent metaserver

--- a/configs/fs/stand-alone/topology.yaml
+++ b/configs/fs/stand-alone/topology.yaml
@@ -1,4 +1,4 @@
-kind: curvefs
+kind: dingofs
 global:
   report_usage: true
   data_dir: ${home}/dingofs/data/${service_role}${service_host_sequence}
