--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -103,6 +103,22 @@
             "showLog": true,
         },
         {
+            "name": "dingoadm enter",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}"
+            },
+            "args": [
+                "enter",
+                "a494b41bde22"
+            ],
+            "showLog": true,
+        },
+        {
             "name": "dingoadm cluster add",
             "type": "go",
             "request": "launch",
