[mdsv2] add dingodb-executor service

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "program": "${workspaceFolder}/cmd/dingoadm/main.go",
             "env": {
                 "CGO_ENABLED": "1",
-                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}"
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}",
+                "dingo_cluster": "mdsv2"
             },
             "args": [
                 "deploy",
