--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -171,6 +171,21 @@
             //"preLaunchTask": "enable-gcc-toolset"
         },
         {
+            "name": "dingoadm upgrade",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}"
+            },
+            "args": [
+                "upgrade",
+            ],
+            "showLog": true,
+        },
+        {
             "name": "dingoadm upgrade -f",
             "type": "go",
             "request": "launch",
