--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -203,6 +203,22 @@
             "showLog": true,
         },
         {
+            "name": "dingoadm clean -f",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}"
+            },
+            "args": [
+                "clean",
+                "-f",
+            ],
+            "showLog": true,
+        },
+        {
             "name": "dingoadm mount mdsv2 vfs_v2",
             "type": "go",
             "request": "launch",
