[monitor] adapt dingofs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -432,5 +432,61 @@
             ],
             "showLog": true,
         },
+        {
+            "name": "dingoadm monitor deploy -c monitor.yaml",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}",
+                "dingo_cluster": "mdsv2"
+            },
+            "args": [
+                "monitor",
+                "deploy",
+                "-c",
+                "/home/dongwei/deploy/monitor/monitor.yaml",
+                // "--local"
+            ],
+            "showLog": true,
+        },
+        {
+            "name": "dingoadm monitor stop -f",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}",
+                "dingo_cluster": "mdsv2"
+            },
+            "args": [
+                "monitor",
+                "stop",
+                "-f"
+            ],
+            "showLog": true,
+        },
+        {
+            "name": "dingoadm monitor clean -f",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}",
+                "dingo_cluster": "mdsv2"
+            },
+            "args": [
+                "monitor",
+                "clean",
+                "-f"
+            ],
+            "showLog": true,
+        },
     ]
 }
