--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -271,31 +271,12 @@
                 //"--mountpoint=/home/dongw/dingofs/cli/cli1"
                 //--- mount senario ---
                 "mount",
-                "mdsv2-s3-fs",
-                "/dingofs/mdsv2-s3",
+                "dw-rados-tmp",
+                "/dingofs/mdsv2-rados",
                 "--host",
                 "dingo-dongwei-2",
                 "-c",
-                "/home/dongwei/client/mdsv2/dingoadm-client-s3-mdsv2.yaml",
-                "--new-dingo",
-                "--fstype=vfs_v2",
-                "--local"
-            ],
-            "showLog": true
-        },
-        {
-            "name": "dingoadm mount skip pull image",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
-            "env": {},
-            "args": [
-                "mount",
-                "dwfs",
-                "/home/dongw/dingofs/cli/cli1",
-                "--host=dingo7232",
-                "-c=/home/dongw/test/client_minio_quota.yaml",
+                "/home/dongwei/client/v5.0/dingoadm-client-rados-public.yaml",
                 "--local"
             ],
             "showLog": true
