--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -360,7 +360,7 @@
             "args": [
                 "config",
                 "commit",
-                "/home/dongwei/deploy/dingofs/topology-mdsv2-v6-sync-java-opts.yaml"
+                "/home/dongwei/deploy/dingofs/topology-main-20251113.yaml"
             ],
             "showLog": true
         },
@@ -572,6 +572,63 @@
             "args": [
                 "monitor",
                 "status",
+            ],
+            "showLog": true,
+        },
+        {
+            "name": "dingoadm monitor upgrade",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}",
+                "dingo_cluster": "mdsv2"
+            },
+            "args": [
+                "monitor",
+                "upgrade",
+                "--id",
+                "4777fc586cb8",
+            ],
+            "showLog": true,
+        },
+        {
+            "name": "dingoadm monitor config commit",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}",
+                "dingo_cluster": "mdsv2"
+            },
+            "args": [
+                "monitor",
+                "config",
+                "commit",
+                "-c",
+                "/home/dongwei/deploy/monitor/monitor-v2.yaml",
+            ],
+            "showLog": true,
+        },
+        {
+            "name": "dingoadm monitor config show",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/dingoadm/main.go",
+            "env": {
+                "CGO_ENABLED": "1",
+                "PATH": "/opt/rh/gcc-toolset-13/root/usr/bin:${env:PATH}",
+                "dingo_cluster": "mdsv2"
+            },
+            "args": [
+                "monitor",
+                "config",
+                "show",
             ],
             "showLog": true,
         },
